# ERPs-Bridge

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: settings.py
mgt/: admin.py  models.py
mgt/migrations/: 0001_initial.py
mgt/templates/admin/mgt/: buy_order_details_change_list.html
src/core/: settings.py  urls.py
src/core/static/css/: buttons.css  pagination.css  sidebar.css  style.css  tables.css  themes.css  topbar.css
src/core/static/js/: sidebar-state.js
src/core/templates/: base.html
src/core/templates/partials/: sidebar.html  topbar.html
src/core/templatetags/: phone_format.py  querystring.py  range_custom.py
src/magento/: admin.py  apps.py  forms.py  models.py  reports.py  repositories.py  urls.py  views.py
src/magento/migrations/: 0001_initial.py  0002_alter_buyorderdetail_buy_order_alter_customer_phone.py  0002_alter_buyorderdetail_buy_order_and_more.py  0003_alter_buyorderdetail_options.py
src/magento/static/css/: buy_orders_list.css  buyorder_list.css
src/magento/static/js/: buy_orders_import_xml.js  buy_orders_list.js  buy_orders_table.js  buyorder_import_xml.js
src/magento/templates/: buy_orders_import_xml.html  buy_orders_list.html  buyorder_import_xml.html  buyorder_list.html  customers_list.html
src/magento/templates/partials/: buy_orders_table.html  customers_table.html
src/parsers/: xml_parser.py
src/utils/: dataframe_utils.py
